--- a/assets/css/cursor.css
+++ b/assets/css/cursor.css
@@ -275,3 +275,9 @@
   transition: box-shadow 0.2s;
   transition: box-shadow 0.2s, -webkit-box-shadow 0.2s, -moz-box-shadow 0.2s;
 }
+
+@media (max-width: 1600px) {
+  .cb-cursor {
+    display: none;
+  }
+}
