--- a/styledropdown.css
+++ b/styledropdown.css
@@ -27,7 +27,7 @@ body {
   }
   
   .select {
-    background: #ffda4d /*#AF69EE;*/
+    background: #AF69EE;
     color: #1F1D0D;
     display: flex;
     justify-content: space-between;
